changed rem to em in css to prevent overlapping on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #448ef6;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Oswald', Tosans-serif;
 }
 
 /* COLOR PALETTE */
@@ -21,12 +21,17 @@ header {
 }
 
 #title {
-  font-size: 4rem;
+  font-size: 4em;
 }
 
 em {
   color: white;
   margin: 3px;
+}
+
+i{
+  margin: 0 3px;
+  color: #fdb44b; 
 }
 
 #summary {
@@ -44,7 +49,7 @@ em {
 #summary:hover {
   width: 1000px;
   height: 400px;
-  font-size: 1.2rem;
+  font-size: 1.2em;
   padding: 30px;
 }
 
@@ -109,7 +114,7 @@ em {
 }
 
 .header-box span {
-  font-size: 3rem;
+  font-size: 3em;
   color: white;
 }
 
@@ -330,11 +335,11 @@ gameboard {
 
 .bc:hover p{
   color: rgba(0,0,0,0);
-  font-size: 1rem;
+  font-size: 1em;
 }
 
 .bc:hover span{
-  font-size: 1.4rem;
+  font-size: 1.4em;
 }
 
 #battle-field .bc:hover {
@@ -351,11 +356,11 @@ gameboard {
 
 #battle-field .bc:hover p{
   color: white;
-  font-size: 1.4rem;
+  font-size: 1.4em;
 }
 
 #battle-field .bc:hover span{
-  font-size: 1.4rem;
+  font-size: 1.4em;
 }
 
 #battle-field .bc:hover p:hover {
@@ -371,14 +376,14 @@ gameboard {
 }
 
 .bc span {
-  font-size: 0.9rem;
+  font-size: 0.9em;
   font-weight: bold;
   color: #520556;
 }
 
 .properties p {
   line-height: 0;
-  font-size: 0.8rem;
+  font-size: 0.8em;
   color: white;
 }
 
@@ -441,10 +446,8 @@ footer {
   font-size: 2em;
 }
 
-@media (max-width: 320px) {
-
+@media (max-width: 1550px) {
   body { 
-     font-size: 2em; 
+     font-size: 0.7em; 
   }
-
 }
